--- a/public/credits/css/styles.css
+++ b/public/credits/css/styles.css
@@ -726,6 +726,14 @@ video {
   margin-left: 2.5rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -820,6 +828,10 @@ video {
 
 .h-\[90\%\] {
   height: 90%;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .max-h-\[17rem\] {
@@ -1636,6 +1648,10 @@ video {
   padding-left: 2.5rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1899,6 +1915,14 @@ video {
   transform: var(--tw-transform);
 }
 
+.hover\:border-4:hover {
+  border-width: 4px;
+}
+
+.hover\:border-b-4:hover {
+  border-bottom-width: 4px;
+}
+
 .hover\:border-gold-light:hover {
   --tw-border-opacity: 1;
   border-color: rgba(255, 215, 0, var(--tw-border-opacity));
@@ -1936,6 +1960,10 @@ video {
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.active\:border-none:active {
+  border-style: none;
 }
 
 .active\:border-yellow-700:active {
@@ -2205,6 +2233,10 @@ video {
 .dark .dark\:hover\:text-yellow-500:hover {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+
+.dark .dark\:active\:border-none:active {
+  border-style: none;
 }
 
 .dark .dark\:active\:border-\[\#6e1a0b\]:active {
